--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "facerecognitionbrain",
+  "name": "smartbrain",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jesteradduru.github.io/facerecognitionbrain",
+  "homepage": "https://jesteradduru.github.io/smartbrain",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react": "^16.9.41",
     "bootstrap": "^4.5.0",
     "clarifai": "^2.9.1",
     "node-sass": "^4.14.1",
